# 04-diamondback

./: .ghci  Makefile  README.md  diamondback.cabal
c-bits/: main.c
lib/Language/Diamondback/: Asm.hs  Checker.hs  Compiler.hs  Normalizer.hs  Types.hs
tests/: Common.hs  Test.hs  yourTests.json
tests/input/: errors.diamond  tail.diamond
